--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,382 @@
-.App {
-  text-align: center;
+/*Global styles*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Raleway', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h6 {
+    font-size: 22px;
+    line-height: 24px;
+    color: #6f34f3
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2 {
+    font-size: 52px;
+    line-height: 54px;
 }
 
-.App-link {
-  color: #61dafb;
+h4 {
+    font-size: 26px;
+    line-height: 28px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+    width: 1200px;
+    margin: 0 auto;
 }
+
+.bgMain {
+    background: #e6e8f2;
+    border-radius: 25px;
+    padding: 0.5rem;
+}
+
+.h-650 {
+    height: 650px;
+}
+
+.alignCenter {
+    align-items: center;
+}
+
+.justifyContent {
+    justify-content: center;
+}
+
+.row {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+
+.col-4 {
+    width: 33.33333333333333%;
+}
+
+/*Global styles*/
+
+/*NavBar*/
+
+.navbar {
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    background: linear-gradient(33deg, rgba(242, 242, 255, 1) 0%, rgba(235, 249, 255, 1) 100%);
+}
+
+.navbar__container {
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar__left-logo img {
+    /*width: 110px;*/
+    width: 70px;
+}
+
+.navbar__right {
+    display: flex;
+    list-style-type: none;
+}
+
+.navbar__right li a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 450;
+    font-size: 20px;
+    padding: 0 15px;
+}
+
+.navbar__right li a:hover {
+    color: #fca61f;
+}
+
+.toggle {
+    display: none;
+}
+
+
+/*Header*/
+
+header {
+    background: linear-gradient(33deg, rgba(242, 242, 255, 1) 0%, rgba(235, 249, 255, 1) 100%);
+    padding-top: 7rem;
+    /*height: 48rem;*/
+    height: 96vh;
+}
+
+.header__content {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    color: #6f34fe;
+}
+
+.header-section h1 {
+    font-size: 85px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.header-section h2 {
+    color: #3f396f;
+    font-size: 52px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    line-height: 54px;
+}
+
+.header-section p {
+    font-size: 22px;
+    line-height: 33px;
+    color: #7d7789;
+    margin-bottom: 26px;
+}
+
+.btn {
+    outline: none;
+    outline: none;
+    border: none;
+    color: black;
+    text-decoration: none;
+}
+
+.btn-outline {
+    background-color: #fca61f;
+    padding: 20px 58px 19px;
+    color: #fff;
+    font-size: 20px;
+    display: inline-block;
+    border-radius: 35px;
+    line-height: 20px;
+    box-shadow: 0 0 85px 0 #e9eefc;
+    border: 1px solid transparent;
+    transition: all 0.3s;
+}
+
+.btn-outline:hover {
+    background-color: #6f34fe;
+}
+
+.image {
+    width: 84vh;
+}
+
+.image {
+    animation: right-mover 1s ease-in-out infinite alternate;
+}
+
+
+@keyframes right-mover {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-10px);
+
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .image {
+        display: none;
+
+    }
+}
+
+/*About*/
+
+.about {
+    width: 100%;
+    background: #fff;
+    padding: 100px 0;
+}
+
+.common {
+    width: 50%;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.about-title {
+    font-size: 32px;
+    margin-bottom: 20px;
+    color: #6f34fe;
+}
+
+
+@media only screen and (max-width: 768px ) {
+    .about__img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .underline-border {
+        background: #fca61f;
+        height: 3px;
+        width: 100px;
+        margin: 30px auto;
+    }
+
+    .about__info {
+        color: #000;
+    }
+
+    .about__info h1 {
+        margin-bottom: 30px;
+        font-size: 40px;
+        color: #3f396d;
+    }
+
+    .about__info p {
+        font-size: 18px;
+        line-height: 1.3;
+        color: #7d7789;
+    }
+
+    .about__buttons {
+        margin-top: 2rem;
+    }
+
+    .about-btn-outline {
+        background-color: #fca61f;
+        padding: 20px 30px 19px;
+        color: #fff;
+        font-size: 20px;
+        display: inline-block;
+        border-radius: 35px;
+        line-height: 20px;
+        box-shadow: 0 0 85px 0 #e9eefc;
+        transition: all 0.3s;
+    }
+
+    .about-btn-outline:hover {
+        background-color: #6f34fe;
+    }
+}
+
+/*PORTFOLIO*/
+
+/*.menu {*/
+/*    padding: 5rem 0;*/
+/*}*/
+
+.title {
+    text-align: center;
+    margin-bottom: 2rem;
+    padding-top: 7rem;
+}
+
+.underline {
+    width: 10rem;
+    height: 0.5rem;
+    background: #fca61f;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn-container {
+    margin-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.filter-btn {
+    background: transparent;
+    border-color: transparent;
+    font-size: 1rem;
+    text-transform: capitalize;
+    margin: 0 0.5rem;
+    letter-spacing: 1px;
+    padding: 0.375rem 0.75rem;
+    color: #fca61f;
+    cursor: pointer;
+    transition: color;
+    border-radius: 20px;
+}
+
+.filter-btn:hover {
+    background: #fca61f;
+    color: white;
+}
+
+.section-center {
+    width: 90vw;
+    margin: 0 auto;
+    max-width: 1170px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 60px;
+
+    /*gap: 3rem 2rem;*/
+    /*justify-items: center;*/
+}
+
+.project-item {
+    display: grid;
+    /*grid-template-columns:  ;*/
+    max-width: 25rem;
+    gap: 1rem;
+}
+
+.photo {
+    object-fit: cover;
+    height: 250px;
+    width: 350px;
+    /*border: 0.25rem solid #fca61f;*/
+
+    border-radius: 10px;
+}
+
+/*.item-info header {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    border-bottom: 0.5px dotted var(--clr-grey-5);*/
+/*}*/
+/*.item-info h4 {*/
+/*    margin-bottom: 0.5rem;*/
+/*}*/
+
+/*.item-text {*/
+/*    margin-bottom: 0;*/
+/*    padding-top: 1rem;*/
+/*}*/
+
+/*@media screen and (min-width: 768px) {*/
+/*    .project-item {*/
+/*        grid-template-columns: 225px 1fr;*/
+/*        gap: 0 1.25rem;*/
+/*        max-width: 40rem;*/
+/*    }*/
+
+/*    .photo {*/
+/*        height: 175px;*/
+/*    }*/
+/*}*/
+
+/*@media screen and (min-width: 1200px) {*/
+/*    .section-center {*/
+/*        width: 95vw;*/
+/*        grid-template-columns: 1fr 1fr;*/
+/*    }*/
+
+/*    .photo {*/
+/*        height: 150px;*/
+/*    }*/
+/*}*/
